update qa
